# 3ds-totp

./: .clangd.example  .gitignore  CMakeLists.txt  Makefile  Makefile.bak  font_whitelist.txt  totp.py
.zed/: settings.json
include/: app_context.h  b32decode.h  camera_task.h  otp_entry.h  scene.h  store.h  totp.h  urlparser.h  utils.h  vec2.h
include/ui/: list.h  scan.h
source/: b32decode.cpp  camera_task.cpp  main.c  main.cpp  otp_entry.cpp  store.cpp  totp.cpp  urlparser.cpp
source/tiny-hmac-c/src/: hmac.h
source/ui/: list.cpp  scan.cpp
